--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
 
+src/MIMIC/vocabulary_refresh/athena
+
 .ipynb_checkpoints
 */.ipynb_checkpoints/*
 
