--- a/src/MIMIC/vocabulary_refresh/vocabulary_refresh.conf
+++ b/src/MIMIC/vocabulary_refresh/vocabulary_refresh.conf
@@ -2,13 +2,13 @@
     "bq_project_template":      "@bq_target_project",
     "bq_dataset_template":      "@bq_target_dataset",
 
-    "local_athena_csv_path":    "../../...",
-    "gs_athena_csv_path":       "gs://mimic_iv_to_omop/...",
+    "local_athena_csv_path":    "/workspaces/mimic2omop/src/MIMIC/vocabulary_refresh/athena",
+    "gs_athena_csv_path":       "gs://shubov-athena",
     "athena_csv_delimiter":     "\t",
     "athena_csv_quote":         "",
 
     "local_mapping_csv_path":   "../custom_mapping_csv",
-    "gs_mapping_csv_path":      "gs://mimic_iv_to_omop/custom_mapping",
+    "gs_mapping_csv_path":      "gs://shubov-athena/custom_mapping",
     "mapping_csv_delimiter":    ",",
     "mapping_csv_quote":        "\\\"",
 
@@ -16,7 +16,7 @@
 
     "variables": 
     {
-        "@bq_target_project":        "odysseus-mimic-dev",
+        "@bq_target_project":        "booming-edge-403620",
         "@bq_target_dataset":        "vocab_2023_01_23_work22"
     },
 
