--- a/src/MIMIC/vocabulary_refresh/vocabulary_refresh.conf
+++ b/src/MIMIC/vocabulary_refresh/vocabulary_refresh.conf
@@ -4,7 +4,7 @@
 
     "local_athena_csv_path":    "/workspaces/mimic2omop/src/MIMIC/vocabulary_refresh/athena",
     "gs_athena_csv_path":       "gs://shubov-athena",
-    "athena_csv_delimiter":     "\t",
+    "athena_csv_delimiter":     "\\t",
     "athena_csv_quote":         "",
 
     "local_mapping_csv_path":   "../custom_mapping_csv",
