--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
-
+physionet.org
 src/MIMIC/vocabulary_refresh/athena
 
 .ipynb_checkpoints
