--- a/src/MIMIC/vocabulary_refresh/vocabulary_refresh.conf
+++ b/src/MIMIC/vocabulary_refresh/vocabulary_refresh.conf
@@ -17,7 +17,7 @@
     "variables": 
     {
         "@bq_target_project":        "booming-edge-403620",
-        "@bq_target_dataset":        "vocab_2023_01_23_work22"
+        "@bq_target_dataset":        "vocab"
     },
 
     "vocabulary_tables":
